[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/HUDAssassin.gd" type="Script" id=1]
[ext_resource path="res://Font/SRAFreePixelFontPack/PixelHigh.ttf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.486275, 0.0941176, 0.235294, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0745098, 0.00784314, 0.0313726, 1 )
corner_radius_top_right = 3
corner_radius_bottom_right = 3

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.121569, 0.0196078, 0.0627451, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0745098, 0.00784314, 0.0313726, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.835294, 0.235294, 0.415686, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0745098, 0.00784314, 0.0313726, 1 )
corner_radius_top_right = 3
corner_radius_bottom_right = 3

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.192157, 0.0196078, 0.117647, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0745098, 0.00784314, 0.0313726, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=10]
resource_local_to_scene = true
bg_color = Color( 0.0352941, 0.0392157, 0.0784314, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_right = 3
corner_radius_bottom_right = 3

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.921569, 0.929412, 0.913725, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0352941, 0.0392157, 0.0784314, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="Animation" id=14]
resource_name = "LowHP"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("HPBar:custom_styles/fg:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.486275, 0.0941176, 0.235294, 1 ), Color( 0.486275, 0.0941176, 0.235294, 0 ), Color( 0.486275, 0.0941176, 0.235294, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HPBarUnder:custom_styles/fg:bg_color")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.486275, 0.0941176, 0.235294, 1 ), Color( 0.486275, 0.0941176, 0.235294, 0 ), Color( 0.486275, 0.0941176, 0.235294, 1 ) ]
}

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("HPBar:custom_styles/fg:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.486275, 0.0941176, 0.235294, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HPBarUnder:custom_styles/fg:bg_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.486275, 0.0941176, 0.235294, 1 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "TakeDamage"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("HPBar:custom_styles/fg:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.486275, 0.0941176, 0.235294, 1 ), Color( 0.486275, 0.0941176, 0.235294, 0 ), Color( 0.486275, 0.0941176, 0.235294, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HPBarUnder:custom_styles/fg:bg_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.486275, 0.0941176, 0.235294, 1 ), Color( 0.486275, 0.0941176, 0.235294, 0 ), Color( 0.486275, 0.0941176, 0.235294, 1 ) ]
}

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="HPBar" type="ProgressBar" parent="."]
margin_right = 450.0
margin_bottom = 36.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 50.0
percent_visible = false

[node name="HPBarUnder" type="ProgressBar" parent="."]
margin_right = 450.0
margin_bottom = 36.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 50.0
percent_visible = false

[node name="XPBar" type="ProgressBar" parent="."]
anchor_left = 1.007
anchor_top = 0.123
anchor_right = 1.007
anchor_bottom = 0.123
margin_left = -1031.17
margin_top = -17.8
margin_right = -806.168
margin_bottom = -7.8
custom_fonts/font = SubResource( 5 )
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
value = 50.0
percent_visible = false

[node name="XPBarUnder" type="ProgressBar" parent="."]
anchor_left = 1.007
anchor_top = 0.123
anchor_right = 1.007
anchor_bottom = 0.123
margin_left = -1031.17
margin_top = -17.8
margin_right = -731.168
margin_bottom = -7.8
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
value = 50.0
percent_visible = false

[node name="LevelText" type="Label" parent="XPBarUnder"]
margin_left = 5.0
margin_top = -1.0
margin_right = 41.0
margin_bottom = 13.0
rect_scale = Vector2( 0.8, 0.8 )
text = "Hejsan"

[node name="EnergyBar" type="ProgressBar" parent="."]
anchor_left = 1.007
anchor_top = 0.123
anchor_right = 1.007
anchor_bottom = 0.123
margin_left = -1031.17
margin_top = -37.8
margin_right = -606.168
margin_bottom = -17.8
custom_fonts/font = SubResource( 5 )
custom_styles/fg = SubResource( 10 )
custom_styles/bg = SubResource( 11 )
max_value = 50.0
value = 50.0
percent_visible = false

[node name="EnergyBarUnder" type="ProgressBar" parent="."]
anchor_left = 1.007
anchor_top = 0.123
anchor_right = 1.007
anchor_bottom = 0.123
margin_left = -1031.17
margin_top = -37.8
margin_right = -606.168
margin_bottom = -17.8
custom_fonts/font = SubResource( 5 )
custom_styles/fg = SubResource( 10 )
custom_styles/bg = SubResource( 11 )
max_value = 50.0
value = 50.0
percent_visible = false

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/LowHP = SubResource( 14 )
anims/RESET = SubResource( 15 )
anims/TakeDamage = SubResource( 16 )

[node name="Tween2" type="Tween" parent="."]

[node name="Tween3" type="Tween" parent="."]
